// Copyright 2025 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.edpaggregator;

import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";

option java_package = "org.wfanet.measurement.edpaggregator.v1alpha";
option java_multiple_files = true;
option java_outer_classname = "LabeledImpressionProto";

// Resource representing a labeled impression.
message LabeledImpression {
  // Time of impression
  google.protobuf.Timestamp impression_time = 1;

  // Vid associated with impression
  int64 vid = 2;

  // Any message representing the impression converted to an event template
  // message
  google.protobuf.Any event_template_map = 3;

  // Impression event group reference id
  string event_group_reference_id = 4;
}
